create skeleton card chip checkbox dialog

--- a/assets/css/md/components/bottom-sheet.css
+++ b/assets/css/md/components/bottom-sheet.css
@@ -1,4 +1,5 @@
 @layer components {
   .BottomSheet {
+    @apply relative min-h-[100px] min-w-full max-w-[640px] rounded-t-2xl bg-surface-variant-light dark:bg-surface-variant-dark;
   }
 }
