--- a/assets/css/md/components/index.css
+++ b/assets/css/md/components/index.css
@@ -2,7 +2,7 @@
 @import './button-group.css';
 @import './badge.css';
 @import './bottom-sheet.css';
-@import './bottomAppbar.css';
+@import './bottom-appbar.css';
 @import './card.css';
 @import './checkbox.css';
 @import './chip.css';
